# path-git-format

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TESTING_JJ.md  flake.nix  rust-toolchain.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/build-rust/: action.yml
.github/workflows/: build-artifacts.yml  build.yml  ci.yml  copilot-setup-steps.yml  pr-asset-build.yml  release.yml  rust.yml
extension/: nvim-fzf-lua-zoxide-folders.lua  zoxide-path-git-format.fish
src/: main.rs
