[package]
name = "path-git-format"
description = "Cli tool to format path(s) with git information"
authors = ["Towry Wang <tovvry@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/towry/path-git-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "^1", features = [
  "rt-multi-thread",
  "macros",
  "io-std",
  "io-util",
  "process",
] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = { version = "0.7" }
strfmt = { version = "^0.2" }
git2 = { version = "^0.18.0", default-features = false, features = ["https", "vendored-libgit2", "vendored-openssl"] }
jj-lib = { version = "0.34.0" }
indexmap = "2"
